# agent-eval-kit

./: .dockerignore  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  NOTICE  README.md  SECURITY.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
docs/: mcp.md  protocol.md  self-hosting.md
examples/: loop.py  mcp.json  quickstart.py
src/agent_eval_kit/: __init__.py  cli.py  client.py  mcp_server.py  modality.py  oauth.py  server_http.py  types.py
src/agent_eval_kit/harness/: otter_install.py  validate.py
src/agent_eval_kit/harness/standing/: AGENTS.md  CLAUDE.md  SOUL.md  hermes-system-prompt.txt  otter-tools.json
tests/: conftest.py  test_byop.py  test_cli.py  test_client.py  test_modality.py  test_oauth.py  test_server_http.py
